// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="onboarding.create_project.bitbucketcloud.no_projects"
    id="onboarding.create_project.bitbucketcloud.no_projects"
    values={
      Object {
        "link": <ForwardRef(Link)
          to={
            Object {
              "pathname": "/projects/create",
              "search": "?mode=bitbucketcloud&resetPat=1",
            }
          }
        >
          onboarding.create_project.update_your_token
        </ForwardRef(Link)>,
      }
    }
  />
</Alert>
`;

exports[`Should render correctly: Importing 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <table
    className="data zebra zebra-hover"
  >
    <tbody>
      <tr
        key="1"
      >
        <td>
          <Tooltip
            overlay="import-slug"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              Repo
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="project"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              project
            </span>
          </Tooltip>
        </td>
        <td>
          <ForwardRef(Link)
            className="display-inline-flex-center big-spacer-right"
            target="_blank"
            to="https://bitbucket.org/worksapce/import-slug"
          >
            onboarding.create_project.bitbucketcloud.link
          </ForwardRef(Link)>
        </td>
        <td
          className="text-right"
        >
          <Button
            disabled={true}
            onClick={[Function]}
          >
            onboarding.create_project.set_up
            <DeferredSpinner
              className="spacer-left"
            />
          </Button>
        </td>
      </tr>
      <tr
        key="1"
      >
        <td>
          <Tooltip
            overlay="project__repo"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              <ForwardRef(Link)
                to={
                  Object {
                    "pathname": "/dashboard",
                    "search": "?id=sq-key",
                  }
                }
              >
                <QualifierIcon
                  className="spacer-right"
                  qualifier="TRK"
                />
                Repo
              </ForwardRef(Link)>
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="project"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              project
            </span>
          </Tooltip>
        </td>
        <td>
          <ForwardRef(Link)
            className="display-inline-flex-center big-spacer-right"
            target="_blank"
            to="https://bitbucket.org/worksapce/project__repo"
          >
            onboarding.create_project.bitbucketcloud.link
          </ForwardRef(Link)>
        </td>
        <td>
          <span
            className="display-flex-center display-flex-justify-end already-set-up"
          >
            <CheckIcon
              className="little-spacer-right"
              size={12}
            />
            onboarding.create_project.repository_imported
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <footer
    className="spacer-top note text-center"
  >
    <Button
      className="spacer-left"
      data-test="show-more"
      disabled={false}
      onClick={[MockFunction]}
    >
      show_more
    </Button>
  </footer>
</div>
`;

exports[`Should render correctly: Loading more 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <table
    className="data zebra zebra-hover"
  >
    <tbody>
      <tr
        key="1"
      >
        <td>
          <Tooltip
            overlay="project__repo"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              Repo
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="project"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              project
            </span>
          </Tooltip>
        </td>
        <td>
          <ForwardRef(Link)
            className="display-inline-flex-center big-spacer-right"
            target="_blank"
            to="https://bitbucket.org/worksapce/project__repo"
          >
            onboarding.create_project.bitbucketcloud.link
          </ForwardRef(Link)>
        </td>
        <td
          className="text-right"
        >
          <Button
            disabled={false}
            onClick={[Function]}
          >
            onboarding.create_project.set_up
          </Button>
        </td>
      </tr>
    </tbody>
  </table>
  <footer
    className="spacer-top note text-center"
  >
    <Button
      className="spacer-left"
      data-test="show-more"
      disabled={true}
      onClick={[MockFunction]}
    >
      show_more
    </Button>
    <DeferredSpinner
      className="text-bottom spacer-left position-absolute"
    />
  </footer>
</div>
`;

exports[`Should render correctly: Searching 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={true}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <div
    className="padded"
  >
    no_results
  </div>
  <footer
    className="spacer-top note text-center"
  >
    <Button
      className="spacer-left"
      data-test="show-more"
      disabled={false}
      onClick={[MockFunction]}
    >
      show_more
    </Button>
  </footer>
</div>
`;

exports[`Should render correctly: Show more 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <table
    className="data zebra zebra-hover"
  >
    <tbody>
      <tr
        key="1"
      >
        <td>
          <Tooltip
            overlay="project__repo"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              Repo
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="project"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              project
            </span>
          </Tooltip>
        </td>
        <td>
          <ForwardRef(Link)
            className="display-inline-flex-center big-spacer-right"
            target="_blank"
            to="https://bitbucket.org/worksapce/project__repo"
          >
            onboarding.create_project.bitbucketcloud.link
          </ForwardRef(Link)>
        </td>
        <td
          className="text-right"
        >
          <Button
            disabled={false}
            onClick={[Function]}
          >
            onboarding.create_project.set_up
          </Button>
        </td>
      </tr>
      <tr
        key="1"
      >
        <td>
          <Tooltip
            overlay="project__repo"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              <ForwardRef(Link)
                to={
                  Object {
                    "pathname": "/dashboard",
                    "search": "?id=sq-key",
                  }
                }
              >
                <QualifierIcon
                  className="spacer-right"
                  qualifier="TRK"
                />
                Repo
              </ForwardRef(Link)>
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="project"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              project
            </span>
          </Tooltip>
        </td>
        <td>
          <ForwardRef(Link)
            className="display-inline-flex-center big-spacer-right"
            target="_blank"
            to="https://bitbucket.org/worksapce/project__repo"
          >
            onboarding.create_project.bitbucketcloud.link
          </ForwardRef(Link)>
        </td>
        <td>
          <span
            className="display-flex-center display-flex-justify-end already-set-up"
          >
            <CheckIcon
              className="little-spacer-right"
              size={12}
            />
            onboarding.create_project.repository_imported
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <footer
    className="spacer-top note text-center"
  >
    <Button
      className="spacer-left"
      data-test="show-more"
      disabled={false}
      onClick={[MockFunction]}
    >
      show_more
    </Button>
  </footer>
</div>
`;

exports[`Should render correctly: Show no more 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <table
    className="data zebra zebra-hover"
  >
    <tbody>
      <tr
        key="1"
      >
        <td>
          <Tooltip
            overlay="project__repo"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              Repo
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="project"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              project
            </span>
          </Tooltip>
        </td>
        <td>
          <ForwardRef(Link)
            className="display-inline-flex-center big-spacer-right"
            target="_blank"
            to="https://bitbucket.org/worksapce/project__repo"
          >
            onboarding.create_project.bitbucketcloud.link
          </ForwardRef(Link)>
        </td>
        <td
          className="text-right"
        >
          <Button
            disabled={false}
            onClick={[Function]}
          >
            onboarding.create_project.set_up
          </Button>
        </td>
      </tr>
    </tbody>
  </table>
  <footer
    className="spacer-top note text-center"
  >
    x_of_y_shown.1.1
  </footer>
</div>
`;
